Second Commit. Added Link to Patients in nav bar. Only shows up when logged in

--- a/app/views/devise/menu/_login_items.html.erb
+++ b/app/views/devise/menu/_login_items.html.erb
@@ -2,6 +2,9 @@
     <li>
         <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
     </li>
+    <li>
+        <%= link_to 'Patients', controller: 'patients' %>
+    </li>
     
 <%else%>
     <li>
