Forth Commit. Links edited. Destroy functions tested

--- a/app/views/visits/edit.html.erb
+++ b/app/views/visits/edit.html.erb
@@ -1,4 +1,4 @@
 <h1>Editing visit</h1>
 <%= render 'form' %>
 <%= link_to 'Show', patient_visit_path(@patient, @visit) %> |
-<%= link_to 'Back', patient_visits_path(@patient) %>
+<%= link_to 'Patient Information', patient_visits_path(@patient) %>
