--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -40,5 +40,7 @@
   <%= @patient.observations %>
 </p>
 
+
 <%= link_to 'Edit', edit_patient_path(@patient) %> |
-<%= link_to 'Back', patients_path %>
+<%= link_to 'Back', patients_path %> |
+<%= link_to 'Visit', patient_visits_path(@patient) %>
