--- a/app/views/visits/_form.html.erb
+++ b/app/views/visits/_form.html.erb
@@ -15,7 +15,7 @@
 <div class="field">
     <p>
         <%= f.label :Details %><br />
-        <%= f.text_field :details %>
+        <%= f.text_field :details, class: "form-control" %>
     </p>
 </div>
 
