--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -22,23 +22,19 @@
             <%= render 'devise/menu/login_items' %>
           </li>
           
-          <li class="search-bar">
-            <%= form_tag(patients_path, :method => "get", id: "search-form") do %>
-            <%= text_field_tag :search, params[:search], placeholder: "Search by lastname" %>
-            <%= submit_tag "Search" %>
-          </li>
           
         </ul>
         
-  <% end %>
+  
         
       </div>
     </nav>
     <div class="jumbotron">
+      <h1>Homepage</h1>
+      <p>This is the homepage to the Hospital Database. Please login to access the Patients list</p>
       
     <%= yield %>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p> 
+    
     </div>
   </body>
 </html>
