--- a/app/views/patients/_form.html.erb
+++ b/app/views/patients/_form.html.erb
@@ -13,12 +13,12 @@
 
   <div class="field">
     <%= form.label :firstname %>
-    <%= form.text_field :firstname %>
+    <%= form.text_field :firstname, class: "form-control" %>
   </div>
 
   <div class="field">
     <%= form.label :lastname %>
-    <%= form.text_field :lastname %>
+    <%= form.text_field :lastname, class: "form-control" %>
   </div>
 
   <div class="field">
