Fourth Commit. Trying form-control on new patient fields

--- a/app/views/patients/_form.html.erb
+++ b/app/views/patients/_form.html.erb
@@ -23,32 +23,32 @@
 
   <div class="field">
     <%= form.label :dateofbirth %>
-    <%= form.text_field :dateofbirth %>
+    <%= form.text_field :dateofbirth, class: "form-control" %>
   </div>
 
   <div class="field">
     <%= form.label :address %>
-    <%= form.text_field :address %>
+    <%= form.text_field :address, class: "form-control" %>
   </div>
 
   <div class="field">
     <%= form.label :phonenumber %>
-    <%= form.number_field :phonenumber %>
+    <%= form.number_field :phonenumber, class: "form-control" %>
   </div>
 
   <div class="field">
     <%= form.label :infection %>
-    <%= form.text_field :infection %>
+    <%= form.text_field :infection, class: "form-control" %>
   </div>
 
   <div class="field">
     <%= form.label :injury %>
-    <%= form.text_field :injury %>
+    <%= form.text_field :injury, class: "form-control" %>
   </div>
 
   <div class="field">
     <%= form.label :observations %>
-    <%= form.text_field :observations %>
+    <%= form.text_field :observations, class: "form-control" %>
   </div>
 
   <div class="actions">
