--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -29,7 +29,7 @@
         
       </div>
     </nav>
-    <div class="jumbotron">
+    <div>
       <h1>Homepage</h1>
       <p>This is the homepage to the Hospital Database. Please login to access the Patients list</p>
       
