--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <body>
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
-      <a class="navbar-brand">Start Bootstrap</a>
+      <%= link_to 'Homepage', controller: 'homepage' %>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="nav" id="nav">
           <li>
