Fifth Commit. Editing stylesheet

--- a/app/views/devise/menu/_login_items.html.erb
+++ b/app/views/devise/menu/_login_items.html.erb
@@ -5,6 +5,9 @@
     <li>
         <%= link_to 'Patients', controller: 'patients' %>
     </li>
+    <li>
+        <%= link_to 'Home', controller: 'homepage' %>
+    </li>
     
 <%else%>
     <li>
