--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,12 @@
   <body>
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
-      <a class="navbar-brand">Start Bootstrap</a>
+      <a class="navbar-brand">Hospital</a>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="nav" id="nav">
+          <li>
+            <%= render 'devise/menu/login_items'
+          </li>
           <li>
             <%= render 'devise/menu/registration_items' %>
           </li>
