Fifth Commit. Editing stylesheet

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="nav" id="nav">
           <li>
-            <%= render 'devise/menu/login_items'
+            <%= render 'devise/menu/login_items' %>
           </li>
           <li>
             <%= render 'devise/menu/registration_items' %>
