--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,11 @@
           <li>
             <%= render 'devise/menu/login_items' %>
           </li>
-          
+          <li class="search-bar">
+            <%= form_tag(patients_path, :method => "get", id: "search-form") do %>
+            <%= text_field_tag :search, params[:search], placeholder: "Search by lastname" %>
+            <%= submit_tag "Search" %>
+          </li>
         </ul>
         
   <% end %>
