--- a/app/views/visits/show.html.erb
+++ b/app/views/visits/show.html.erb
@@ -18,7 +18,10 @@
 </p>
 <!-- Display the reviews of a movie -->
 <% @patient.visits.each do |visit| %>
-
+<p>
+<b>Visit details:</b>
+<%= visit.detail %>
+</p>
 <% end %>
 <%= link_to 'Patient Information', patient_path %> |
 <%= link_to 'Show All Visits', patient_visits_path(@patient) %> |
