Eight Commit. Editing CSS file

--- a/app/views/visits/show.html.erb
+++ b/app/views/visits/show.html.erb
@@ -20,7 +20,7 @@
 <% @patient.visits.each do |visit| %>
 <p>
 <b>Visit details:</b>
-<%= visit.detail %>
+<%= visit.details %>
 </p>
 <% end %>
 <%= link_to 'Patient Information', patient_path %> |
